force-app/main/default/objects/Opportunity/fields/Quick_Fix__c.field-meta.xml
<CustomField>
    <fullName>Quick_Fix__c</fullName>
    <label>Quick Fix</label>
    <length>50</length>
    <type>Text</type>
</CustomField>