force-app/main/default/objects/Opportunity/fields/Slow_Fix__c.field-meta.xml
<CustomField>
    <fullName>Slow_Fix__c</fullName>
    <label>Slow Fix</label>
    <length>50</length>
    <type>Text</type>
</CustomField>